--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
           </div>
         </div>
         <p>
-          B.Tech in Computer Science with specialization in Artificial
-          Intelligence
+        🚀
+          <b
+            >Computer Science Student || Full Stack Developer || Upcoming SDE</b
+          >
+          ✨
         </p>
       </div>
     </section>
